--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="./styles/mediasquery.css">
     <link rel="shortcut icon" href="/img/logo1-semfundo.png" type="image/x-icon" />
-    <script src="./script.js" defer></script>
+    <script src="./scripts/script.js" defer></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Rancho da Vovó</title>
   </head>
@@ -18,7 +19,7 @@
         </a>
         <nav>
           <ul>
-            <li><a href="#title">Inicio</a></li>
+            <li><a href="#title">Início</a></li>
             <li><a href="#sobre">Sobre</a></li>
             <li><a href="#cardapio">Cardápio</a></li>
             <li>
@@ -62,7 +63,7 @@
       <div class="cardapio-txt-container">
         <div class="cardapio-texto">
           <h1>Cardápio</h1>
-          <h2>Explore nossas delicias preparadas com receitas de familia</h2>
+          <h2>Explore nossas delícias preparadas com receitas de família</h2>
         </div>
       </div>
       <div class="item-cardapio" id="feijao-tropeiro">
@@ -151,10 +152,10 @@
         <div id="img-slide-container">
           <img src="./img/vovolurdes.jpg" alt="" class="slider-img" />
           <img src="./img/pratos/feijao.jpg" alt="" class="slider-img" />
-          <img src="./img/dcd4c161-dbfc-4864-a848-0f4c9ecde4e3.png" alt="" class="slider-img" />
-          <img src="./img/pratos/bolo.jpg" alt="" class="slider-img" />
+          <img src="./img/restaurante-sp.png" alt="" class="slider-img" />
+          <img src="./img/carrossel_img1.jpg" alt="" class="slider-img" />
           <img src="./img/pratos/canjica.jpg" alt="" class="slider-img" />
-          <img src="/img/pratos/feijao.jpg" alt="" class="slider-img" />
+          <img src="./img/rest_fora.jpg" alt="" class="slider-img" />
         </div>
 
         <button id="next-button" class="bt">></button>
