--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/mediasquery.css">
-    <link rel="shortcut icon" href="/img/logo1-semfundo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/logo1-semfundo.png" type="image/x-icon" />
     <script src="./scripts/script.js" defer></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Rancho da Vovó</title>
